crates/alder-can/src/snapshots/alder_can__canonicalize__tests__task_annotation_does_not_authorize_await.snap
---
source: crates/alder-can/src/canonicalize.rs
description: "import task\nfn wait() Task[()] { task.sleep(1).await }"
---
[
    Error {
        region: Region {
            start: Position {
                line: 2,
                column: 22,
            },
            end: Position {
                line: 2,
                column: 41,
            },
        },
        kind: Expr(
            AwaitOutsideAsync,
        ),
    },
]
