crates/alder-can/src/snapshots/alder_can__canonicalize__tests__trait_method_parameters_require_annotations.snap
---
source: crates/alder-can/src/canonicalize.rs
expression: "can_error(\"trait Show[a] { fn show(value) -> String }\")"
---
[
    Error {
        region: Region {
            start: Position {
                line: 1,
                column: 25,
            },
            end: Position {
                line: 1,
                column: 30,
            },
        },
        kind: Type(
            MissingAnnotation {
                name: "show",
                position: "parameter",
            },
        ),
    },
]
