crates/alder-can/src/snapshots/alder_can__canonicalize__tests__trait_method_returns_require_annotations.snap
---
source: crates/alder-can/src/canonicalize.rs
expression: "can_error(\"trait Show[a] { fn show(value: a) }\")"
---
[
    Error {
        region: Region {
            start: Position {
                line: 1,
                column: 20,
            },
            end: Position {
                line: 1,
                column: 24,
            },
        },
        kind: Type(
            MissingAnnotation {
                name: "show",
                position: "return type",
            },
        ),
    },
]
