crates/alder-can/src/snapshots/alder_can__canonicalize__tests__unavailable_feature_errors-2.snap
---
source: crates/alder-can/src/canonicalize.rs
description: "fn expand() { generated!() }"
---
[
    Error {
        region: Region {
            start: Position {
                line: 1,
                column: 15,
            },
            end: Position {
                line: 1,
                column: 27,
            },
        },
        kind: Expr(
            MacroUnavailable {
                name: "generated",
            },
        ),
    },
]
