crates/alder-can/src/snapshots/alder_can__canonicalize__tests__unavailable_feature_errors.snap
---
source: crates/alder-can/src/canonicalize.rs
description: "#[derive(Eq)]\ntype Id = Number\n"
---
[
    Error {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 2,
                column: 17,
            },
        },
        kind: Attribute(
            InvalidDerive {
                reason: "built-in derives are only available on enums",
            },
        ),
    },
]
