crates/alder-can/src/snapshots/alder_can__canonicalize__tests__use_provider_does_not_escape_its_function.snap
---
source: crates/alder-can/src/canonicalize.rs
description: "type Session = { user: String }\nfn first() { use Session\nSession.user }\nfn second() { Session.user }"
---
[
    Error {
        region: Region {
            start: Position {
                line: 4,
                column: 15,
            },
            end: Position {
                line: 4,
                column: 22,
            },
        },
        kind: Pattern(
            Name(
                Unknown {
                    namespace: Constructor,
                    qualifier: None,
                    name: "Session",
                    suggestions: [],
                },
            ),
        ),
    },
]
